# edlut

./: AUTHORS.txt  Compress_network.m  Development_Team.md  Doxyfile  EDLUT_Brief_Description.md  INSTALL  ProjectHome.md  PythonReadme.txt  README  README.md  Related_Publications.md  _borisGranuleECv3.c.boc_6i  configure  configure.ac  flags.makefile  flags.makefile.in  makefile  makefile.in  nooutbig2.m  rules.makefile  rules.makefile.in  static-variables.makefile  varlog.m
Kernel/: .cdtbuild  .cdtproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  INSTALL_LINUX  INSTALL_WINDOWS  MAPS.docx  NewEDLUT.doxyfile  configure  flags.makefile  makefile  rules.makefile  static-variables.makefile
Kernel/Kernel/: makefile
Kernel/cmake/: CheckIncludesSymbols.cmake  ProcessUserOptions.cmake  cuda_arch.cu
Kernel/doc/html/: _additive_weight_change_8h-source.html  _additive_weight_change_8h.html  _client_socket_8h-source.html  _communication_event_8cpp-source.html  _e_d_l_u_t_exception_8cpp.html  _e_d_l_u_t_file_exception_8h-source.html  _e_d_l_u_t_kernel_8cpp-source.html  _e_d_l_u_t_kernel_8cpp.html  _end_simulation_event_8cpp.html  _end_simulation_event_8h.html  _event_8cpp.html  _event_8h.html  _event_queue_8cpp-source.html  _file_output_weight_driver_8cpp.html  _input_spike_driver_8h.html  _interconnection_8cpp-source.html  _interconnection_8cpp.html  _multiplicative_weight_change_8cpp.html  _network_8h-source.html  _neuron_8cpp-source.html  _neuron_model_table_8h.html  _output_weight_driver_8h.html  _param_reader_8cpp.html  _server_socket_8h.html  _spike_8cpp-source.html  _spike_8cpp.html  _t_c_p_i_p_input_output_spike_driver_8cpp.html  _t_c_p_i_p_input_spike_driver_8cpp-source.html  _t_c_p_i_p_input_spike_driver_8cpp.html  _t_c_p_i_p_input_spike_driver_8h.html  _timer_8cpp.html  _timer_8h-source.html  _utils_8cpp-source.html  _utils_8h-source.html  class_additive_weight_change-members.html  class_client_socket.html  class_e_d_l_u_t_exception.html  class_event_queue-members.html  class_interconnection.html  class_multiplicative_weight_change.html  (+20 more)
Kernel/include/: CMakeLists.txt  cudaError.h
Kernel/include/communication/: ArrayInputCurrentDriver.h  ArrayInputSpikeDriver.h  ArrayOutputSpikeDriver.h  CMakeLists.txt  FileInputCurrentDriver.h  FileInputSpikeDriver.h  FileOutputSpikeDriver.h  FileOutputWeightDriver.h  InputBooleanArrayDriver.h  InputCurrentDriver.h  InputSpikeDriver.h  OutputSpikeDriver.h  OutputWeightDriver.h  TCPIPConnectionType.h  TCPIPInputOutputSpikeDriver.h  TCPIPInputSpikeDriver.h  TCPIPOutputSpikeDriver.h
Kernel/include/integration_method/: BDFn.h  BDFn_GPU2.cuh  BDFn_GPU_C_INTERFACE.cuh  BifixedStep.h  BifixedStep_GPU2.cuh  BifixedStep_GPU_C_INTERFACE.cuh  Bifixed_BDFn.h  Bifixed_BDFn_GPU2.cuh  Bifixed_BDFn_GPU_C_INTERFACE.cuh  Bifixed_Euler.h  Bifixed_Euler_GPU2.cuh  Bifixed_Euler_GPU_C_INTERFACE.cuh  Bifixed_RK2.h  Bifixed_RK2_GPU2.cuh  Bifixed_RK2_GPU_C_INTERFACE.cuh  Bifixed_RK4.h  Bifixed_RK4_GPU2.cuh  Bifixed_RK4_GPU_C_INTERFACE.cuh  CMakeLists.txt  Euler.h  Euler_GPU2.cuh  Euler_GPU_C_INTERFACE.cuh  FixedStep.h  FixedStepSRM.h  FixedStep_GPU2.cuh  FixedStep_GPU_C_INTERFACE.cuh  IntegrationMethod.h  IntegrationMethodFactory.h  IntegrationMethodFactoryInfo.h  IntegrationMethodFactory_GPU2.cuh  IntegrationMethodFactory_GPU_C_INTERFACE.cuh  IntegrationMethodFast.h  IntegrationMethodFast_GPU2.cuh  IntegrationMethodFast_GPU_C_INTERFACE.cuh  IntegrationMethod_GPU2.cuh  IntegrationMethod_GPU_C_INTERFACE.cuh  IntegrationMethod_GPU_GLOBAL_FUNCTIONS.cuh  RK2.h  RK2_GPU2.cuh  RK2_GPU_C_INTERFACE.cuh  (+3 more)
Kernel/include/interface/: CMakeLists.txt
Kernel/include/learning_rules/: AdditiveKernelChange.h  BufferedActivityTimes.h  CMakeLists.txt  ConnectionState.h  CosState.h  CosWeightChange.h  ExpBufferedWeightChange.h  ExpState.h  ExpWeightChange.h  LearningRule.h  LearningRuleFactory.h  STDPLSState.h  STDPLSWeightChange.h  STDPState.h  STDPWeightChange.h  SimetricCosBufferedWeightChange.h  SimetricCosSTDPState.h  SimetricCosSTDPWeightChange.h  SimetricCosSinSTDPState.h  SimetricCosSinSTDPWeightChange.h  SimetricCosSinState.h  SimetricCosSinWeightChange.h  SimetricCosState.h  SimetricCosWeightChange.h  SinBufferedWeightChange.h  SinState.h  SinWeightChange.h  WithPostAndTriggerSynaptic.h  WithPostSynaptic.h  WithTriggerSynaptic.h
Kernel/include/neuron_model/: ALIFTimeDrivenModel.h  AdExTimeDrivenModel.h  AdExTimeDrivenModelVector.h  AdExTimeDrivenModel_GPU2.cuh  AdExTimeDrivenModel_GPU_C_INTERFACE.cuh  BufferedState.h  CMakeLists.txt  CompressNeuronModelTable.h  CompressSynchronousTableBasedModel.h  CompressTableBasedModel.h  CurrentSynapseModel.h  EgidioGranuleCell_TimeDriven.h  EgidioGranuleCell_TimeDriven_GPU2.cuh  EgidioGranuleCell_TimeDriven_GPU_C_INTERFACE.cuh  EventDrivenInputDevice.h  EventDrivenNeuronModel.h  HHTimeDrivenModel.h  HHTimeDrivenModel_GPU2.cuh  HHTimeDrivenModel_GPU_C_INTERFACE.cuh  InputCurrentNeuronModel.h  InputSpikeNeuronModel.h  IzhikevichTimeDrivenModel.h  IzhikevichTimeDrivenModel_GPU2.cuh  IzhikevichTimeDrivenModel_GPU_C_INTERFACE.cuh  LIFTimeDrivenModel.h  LIFTimeDrivenModel_1_2.h  LIFTimeDrivenModel_1_4_GPU2.h  LIFTimeDrivenModel_GPU2.cuh  LIFTimeDrivenModel_GPU_C_INTERFACE.cuh  (+23 more)
Kernel/m4/: matlab.m4
Kernel/python/: CMakeLists.txt  README.md  setup.py.in  simulation_api.pxd  simulation_wrapper.pyx
Kernel/src/: EDLUTKernel.cpp  EDLUTMatlab.cpp  NewEDLUT.doxyfile  RealTimeEDLUTKernel.cpp  SimulatedRobotControl.c  StepByStep.cpp  testCppAPI.cpp
Kernel/utils/: .gitignore  ALIF threshold.ipynb  Input_currents.cfg  alif_test.py  get_layer_states.ipynb  jupyter_test_OPENMP.ipynb  noout2par.m  python_test.py  python_test_CUDA.py  python_test_OPENMP.py  python_test_all_learning_rule.py  python_test_all_post_learning_rule.py  python_test_all_trigger_learning_rule.py  python_test_learning_rule.py  python_test_poisson_vector.py  python_test_vector_neurons.py  vars.ps1.in  vars.sh.in
branches/EDLUT_with_Robot/: AUTHORS.txt  configure  configure.ac  flags.makefile.in  makefile.in  rules.makefile.in  static-variables.makefile
(+1444 files in other folders)
